--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,10 +18,15 @@ dependencies:
   flutter_bloc: ^8.0.1
   dio: ^4.0.4
   auto_route: ^3.2.4
-  dotted_border: ^2.0.0+2
-  image_picker: ^0.8.4+11
-  path: ^1.8.1
+  shared_preferences: ^2.0.13
 
+  dotted_border: ^2.0.0+2
+
+  external_app_launcher: ^2.0.2
+  open_file: ^3.2.1
+  permission_handler: ^9.2.0
+
+  image_picker: ^0.8.4+11
 
 dev_dependencies:
   flutter_test:
@@ -36,16 +41,16 @@ flutter:
     - assets/icons/
     - assets/images/
 
-    - assets/fonts/Lora/
+    - assets/fonts/Baloo2/
     - assets/fonts/Quicksand/
 
   fonts:
-    - family: Lora
+    - family: Baloo2
       fonts:
-        - asset: assets/fonts/Lora/Lora-Regular.ttf
-        - asset: assets/fonts/Lora/Lora-Medium.ttf
+        - asset: assets/fonts/Baloo2/Baloo2-Regular.ttf
+        - asset: assets/fonts/Baloo2/Baloo2-Medium.ttf
           weight: 500
-        - asset: assets/fonts/Lora/Lora-Bold.ttf
+        - asset: assets/fonts/Baloo2/Baloo2-Bold.ttf
           weight: 700
     - family: Quicksand
       fonts:
