--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
 
   external_app_launcher: ^2.0.2
   open_file: ^3.2.1
+  path_provider:
   permission_handler: ^9.2.0
 
   image_picker: ^0.8.4+11
