--- a/application/pubspec.yaml
+++ b/application/pubspec.yaml
@@ -28,8 +28,9 @@ dependencies:
   open_file: ^3.2.1
   path_provider: ^2.0.9
   permission_handler: ^9.2.0
-
   image_picker: ^0.8.4+11
+
+  cached_network_image: ^3.2.0
 
 dev_dependencies:
   flutter_test:
