create mask, but api not work

--- a/application/pubspec.yaml
+++ b/application/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
 
   cached_network_image: ^3.2.0
 
+  flutter_painter: ^1.0.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
