--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@
 .packages
 .pub-cache/
 .pub/
-/build/
+/application/build/
 
 # Web related
 lib/generated_plugin_registrant.dart
@@ -41,6 +41,6 @@ app.*.symbols
 app.*.map.json
 
 # Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+/application/android/app/debug
+/application/android/app/profile
+/application/android/app/release
