Implement auth api

--- a/application/pubspec.yaml
+++ b/application/pubspec.yaml
@@ -31,12 +31,16 @@ dependencies:
   image_picker: ^0.8.4+11
 
   cached_network_image: ^3.2.0
+  json_annotation: ^4.5.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^1.0.0
+  json_serializable: ^6.2.0
+  build_runner: ^2.1.10
   test: ^1.19.5
 
 flutter:
