--- a/application/android/app/src/main/AndroidManifest.xml
+++ b/application/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.example.bk_3d_view">
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:label="bk_3d_view"
         android:icon="@mipmap/ic_launcher">
